--- a/Dagger2/app/src/main/res/values/strings.xml
+++ b/Dagger2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Dagger2</string>
     <string name="desc">desc</string>
+    <string name="loading_please_wait">Loading please wait</string>
 </resources>
