--- a/Dagger2/app/src/main/res/values/strings.xml
+++ b/Dagger2/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Dagger2</string>
     <string name="desc">desc</string>
     <string name="loading_please_wait">Loading please wait</string>
+    <string name="user_id">User ID</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
